force-app/main/default/objects/Opportunity/fields/A4S_Document__c.field-meta.xml
<CustomField>
    <fullName>A4S_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>A4S Document</label>
    <referenceTo>dsfs__DocuSign_Status__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>