force-app/main/default/objects/Opportunity/fields/A4S_Link__c.field-meta.xml
<CustomField>
    <fullName>A4S_Link__c</fullName>
    <description>This is the link to send to Clients to access the buy process.</description>
    <inlineHelpText>This is the link to send to Clients to access the buy process.</inlineHelpText>
    <label>A4S Link</label>
    <length>100</length>
    <type>Text</type>
</CustomField>