force-app/main/default/objects/Opportunity/fields/A4S_Needs_Review__c.field-meta.xml
<CustomField>
    <fullName>A4S_Needs_Review__c</fullName>
    <formula>A4S_Document__r.Billing_Rejected__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>A4S Needs Review</label>
    <type>Checkbox</type>
</CustomField>