force-app/main/default/objects/Opportunity/fields/Actual_Hours_Worked__c.field-meta.xml
<CustomField>
    <fullName>Actual_Hours_Worked__c</fullName>
    <description>Actual hours worked by Ubiquity teams to complete the task.</description>
    <inlineHelpText>Actual hours worked by Ubiquity teams to complete the task.</inlineHelpText>
    <label>Actual Hours Worked</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>