force-app/main/default/objects/Opportunity/fields/Additional_Financial_Professional_Names__c.field-meta.xml
<CustomField>
    <fullName>Additional_Financial_Professional_Names__c</fullName>
    <label>Additional Financial Professional Names</label>
    <type>TextArea</type>
</CustomField>