force-app/main/default/objects/Opportunity/fields/Advisor_Fees_Paid_from_ESA__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Fees_Paid_from_ESA__c</fullName>
    <description>Will advisor fees be paid from ERISA Spend Account?</description>
    <inlineHelpText>Will advisor fees be paid from ERISA Spend Account?</inlineHelpText>
    <label>Advisor Fees Paid from ESA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>