force-app/main/default/objects/Opportunity/fields/Advisor_Linked__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Linked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Advisor Linked</label>
    <type>Checkbox</type>
</CustomField>