force-app/main/default/objects/Opportunity/fields/Agreement_for_Services_A4S__c.field-meta.xml
<CustomField>
    <fullName>Agreement_for_Services_A4S__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Can only be checked by Billing if A4S been approved?</description>
    <inlineHelpText>Can only be checked by Billing if A4S been approved?</inlineHelpText>
    <label>Agreement for Services (A4S)</label>
    <type>Checkbox</type>
</CustomField>