force-app/main/default/objects/Opportunity/fields/Amount_Before_Discount__c.field-meta.xml
<CustomField>
    <fullName>Amount_Before_Discount__c</fullName>
    <description>Total amount prior to Discount application</description>
    <inlineHelpText>Total amount prior to Discount application</inlineHelpText>
    <label>Amount Before Discount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>