force-app/main/default/objects/Opportunity/fields/Ancillary_Bill_Discount__c.field-meta.xml
<CustomField>
    <fullName>Ancillary_Bill_Discount__c</fullName>
    <description>Dollar amount of ancillary bill discount</description>
    <formula>Amount_Before_Discount__c -  Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Dollar amount of ancillary bill discount</inlineHelpText>
    <label>Ancillary Bill Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>