force-app/main/default/objects/Opportunity/fields/Ancillary_Billing_Category__c.field-meta.xml
<CustomField>
    <fullName>Ancillary_Billing_Category__c</fullName>
    <description>Reason for the ancillary bill</description>
    <inlineHelpText>Reason for the ancillary bill</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adjustments</fullName>
            </value>
            <value>
                <fullName>ADP/ACP Testing</fullName>
            </value>
            <value>
                <fullName>Amendment</fullName>
            </value>
            <value>
                <fullName>Calculation (Annual Contribution)</fullName>
            </value>
            <value>
                <fullName>Custodian Changes</fullName>
            </value>
            <value>
                <fullName>Form 5330 Preparation</fullName>
            </value>
            <value>
                <fullName>Form 5558 Extension</fullName>
            </value>
            <value>
                <fullName>Fund Change</fullName>
            </value>
            <value>
                <fullName>IRS/DOL Audit Comm</fullName>
            </value>
            <value>
                <fullName>IRS/DOL Audit Package</fullName>
            </value>
            <value>
                <fullName>Kotapay Xcelerrated Corrections</fullName>
            </value>
            <value>
                <fullName>Large Plan 5500 Items</fullName>
            </value>
            <value>
                <fullName>Late 5500 DFVC</fullName>
            </value>
            <value>
                <fullName>Late Interest Calculation</fullName>
            </value>
            <value>
                <fullName>Mid-year testing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Relius Reports</fullName>
            </value>
            <value>
                <fullName>Report Request</fullName>
            </value>
            <value>
                <fullName>SCP and VCP Corrections</fullName>
            </value>
            <value>
                <fullName>Spinoffs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>