force-app/main/default/objects/Opportunity/fields/Ancillary_Discount_Reason__c.field-meta.xml
<CustomField>
    <fullName>Ancillary_Discount_Reason__c</fullName>
    <description>Reason for Ancillary Billing Discount</description>
    <inlineHelpText>Reason for Ancillary Billing Discount</inlineHelpText>
    <label>Ancillary Discount Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ubiquity Error</fullName>
            </value>
            <value>
                <fullName>One-Time Courtesy Waiver</fullName>
            </value>
            <value>
                <fullName>Client already billed by another team</fullName>
            </value>
            <value>
                <fullName>At-Risk Clients/Saving Client</fullName>
            </value>
            <value>
                <fullName>System Bug</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>