force-app/main/default/objects/Opportunity/fields/Ancillary_Services_Included__c.field-meta.xml
<CustomField>
    <fullName>Ancillary_Services_Included__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Ancillary Services Included</label>
    <type>Checkbox</type>
</CustomField>