force-app/main/default/objects/Opportunity/fields/Annual_Leads__c.field-meta.xml
<CustomField>
    <fullName>Annual_Leads__c</fullName>
    <description>Estimated number of Annual Leads delivered by relationship</description>
    <label>Annual Leads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>