force-app/main/default/objects/Opportunity/fields/AS_k_Paid__c.field-meta.xml
<CustomField>
    <fullName>AS_k_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Billing will check off this field once the payment was sent to the referral source</description>
    <label>AS(k) Paid</label>
    <type>Checkbox</type>
</CustomField>