force-app/main/default/objects/Opportunity/fields/Asssociated_Partner_Role__c.field-meta.xml
<CustomField>
    <fullName>Asssociated_Partner_Role__c</fullName>
    <description>What role does this Partner play for this Opportunity?</description>
    <inlineHelpText>What role does this Partner play for this Opportunity?</inlineHelpText>
    <label>Associated Partner Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CPA Firm</fullName>
            </value>
            <value>
                <fullName>Financial Advisory Firm</fullName>
            </value>
            <value>
                <fullName>Financial Advisory Firm (Referral Only)</fullName>
            </value>
            <value>
                <fullName>HCM Provider</fullName>
            </value>
            <value>
                <fullName>Interested Third Party</fullName>
            </value>
            <value>
                <fullName>Law Office</fullName>
            </value>
            <value>
                <fullName>Payroll Provider</fullName>
            </value>
            <value>
                <fullName>Referrer/Wholesaler</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>