force-app/main/default/objects/Opportunity/fields/Authorization_Form_Received__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Form_Received__c</fullName>
    <label>Authorization Form Received</label>
    <type>Date</type>
</CustomField>