force-app/main/default/objects/Opportunity/fields/Auto_Enroll_Escalation_Type__c.field-meta.xml
<CustomField>
    <fullName>Auto_Enroll_Escalation_Type__c</fullName>
    <label>Auto Enroll Escalation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Flat</fullName>
            </value>
            <value>
                <fullName>Auto-Escalate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>