force-app/main/default/objects/Opportunity/fields/Auto_EnrollmentDeferral_Escalation_Rate__c.field-meta.xml
<CustomField>
    <fullName>Auto_EnrollmentDeferral_Escalation_Rate__c</fullName>
    <description>Deferral rate participant will be given for auto-enrollment. Flat rates do not auto-escalate.</description>
    <inlineHelpText>Deferral rate participant will be given for auto-enrollment. Flat rates do not auto-escalate.</inlineHelpText>
    <label>Auto-Enrollment Deferral/Escalation GLOB</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Service_Option__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Auto_Enrollment_Deferral_Escalation_Rate</valueSetName>
    </valueSet>
</CustomField>