force-app/main/default/objects/Opportunity/fields/AutoEnrollment__c.field-meta.xml
<CustomField>
    <fullName>AutoEnrollment__c</fullName>
    <description>Will the plan be utilizing Auto-Enrollment, and if so what type?</description>
    <inlineHelpText>Will the plan be utilizing Auto-Enrollment, and if so what type?</inlineHelpText>
    <label>Auto-Enrollment</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Service_Option__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>EACA</fullName>
            </value>
            <value>
                <fullName>QACA</fullName>
            </value>
            <value>
                <fullName>ACA</fullName>
            </value>
            <value>
                <fullName>Automatic Enrollment with Safe Harbor (QACA)</fullName>
                <isActive>false</isActive>
                <label>Automatic Enrollment with Safe Harbor (QACA)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>