force-app/main/default/objects/Opportunity/fields/Brokerage_Accounts_PCRA__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Accounts_PCRA__c</fullName>
    <description>Will plan allow for brokerage accounts?</description>
    <inlineHelpText>Will plan allow for brokerage accounts?</inlineHelpText>
    <label>Brokerage Accounts (PCRA)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Service_Option__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Brokerage_Accounts_PCRA</valueSetName>
    </valueSet>
</CustomField>