force-app/main/default/objects/Opportunity/fields/Campaign_Code__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Code__c</fullName>
    <formula>Account.Campaign_code__c</formula>
    <label>Campaign Code</label>
    <type>Text</type>
</CustomField>