force-app/main/default/objects/Opportunity/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description># of the case your team was working that led top the creation of this opportunity.</description>
    <inlineHelpText># of the case your team was working that led top the creation of this opportunity.</inlineHelpText>
    <label>Case #</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>