force-app/main/default/objects/Opportunity/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>This populated from The Account Page</description>
    <formula>TEXT(Account.Channel__c)</formula>
    <inlineHelpText>This is populated from the account page.</inlineHelpText>
    <label>Channel</label>
    <type>Text</type>
</CustomField>