force-app/main/default/objects/Opportunity/fields/Close_Date_Month_Day__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_Month_Day__c</fullName>
    <formula>Date(2015,MONTH(CloseDate),Day(CloseDate))</formula>
    <label>Close Date (Month, Day)</label>
    <type>Date</type>
</CustomField>