force-app/main/default/objects/Opportunity/fields/Closed_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Reason__c</fullName>
    <label>Closed Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Advisor Did Not Win Plan</fullName>
            </value>
            <value>
                <fullName>Chose Alternative Plan Type</fullName>
            </value>
            <value>
                <fullName>Cost</fullName>
            </value>
            <value>
                <fullName>Covid-19 Delay</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Lost Due to Plan Provisions (write in)</fullName>
            </value>
            <value>
                <fullName>Lost to 401(k) Competitor (write in)</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor</fullName>
            </value>
            <value>
                <fullName>Not Establishing Retirement Benefit</fullName>
            </value>
            <value>
                <fullName>Plan No Start</fullName>
            </value>
            <value>
                <fullName>Priority Change with Partner</fullName>
            </value>
            <value>
                <fullName>Product Integration</fullName>
            </value>
            <value>
                <fullName>Proposal sent then dropped off</fullName>
            </value>
            <value>
                <fullName>Prospect Unresponsive</fullName>
            </value>
            <value>
                <fullName>Sold Company</fullName>
            </value>
            <value>
                <fullName>Stayed with Current 401(k) Provider (write in)</fullName>
            </value>
            <value>
                <fullName>Technology Issue</fullName>
            </value>
            <value>
                <fullName>Timing Issue</fullName>
            </value>
            <value>
                <fullName>Transitioning from Ubiquity</fullName>
            </value>
            <value>
                <fullName>Ubiquity Withdrew Interest</fullName>
            </value>
            <value>
                <fullName>Unqualified Opportunity</fullName>
            </value>
            <value>
                <fullName>Webform Preferred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>