force-app/main/default/objects/Opportunity/fields/Closed_Lost_Write_In_Detail__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Write_In_Detail__c</fullName>
    <label>Closed Lost Write In Detail</label>
    <length>50</length>
    <type>Text</type>
</CustomField>