force-app/main/default/objects/Opportunity/fields/Commissionable_Amount_Editable__c.field-meta.xml
<CustomField>
    <fullName>Commissionable_Amount_Editable__c</fullName>
    <inlineHelpText>Amount minus partner fees</inlineHelpText>
    <label>Commissionable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>