force-app/main/default/objects/Opportunity/fields/Compliance_Approved__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has Compliance Approved the Upgrade?</description>
    <inlineHelpText>Has Compliance Approved the Upgrade?</inlineHelpText>
    <label>Compliance Approved</label>
    <type>Checkbox</type>
</CustomField>