force-app/main/default/objects/Opportunity/fields/Connected_Partner__c.field-meta.xml
<CustomField>
    <fullName>Connected_Partner__c</fullName>
    <description>Partner with Shared SLA. If edit needed please do so on account.</description>
    <formula>TEXT( Account.Connected_Partner__c)</formula>
    <inlineHelpText>Partner with Shared SLA. If edit needed please do so on account.</inlineHelpText>
    <label>Connected Partner</label>
    <type>Text</type>
</CustomField>