force-app/main/default/objects/Opportunity/fields/Connected_Partner_Rep__c.field-meta.xml
<CustomField>
    <fullName>Connected_Partner_Rep__c</fullName>
    <formula>Account.Connected_Partner_Rep__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Connected Partner Rep</label>
    <type>Text</type>
</CustomField>