force-app/main/default/objects/Opportunity/fields/Conversion_Assets__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Assets__c</fullName>
    <description>Amount of incoming Conversion Assets</description>
    <inlineHelpText>Amount of incoming Conversion Assets</inlineHelpText>
    <label>Conversion Assets</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>