force-app/main/default/objects/Opportunity/fields/Conversion_Type__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Type__c</fullName>
    <description>What type of plan will the prospect be converting from? This effects how the plan is implemented.</description>
    <inlineHelpText>What type of plan will the prospect be converting from? This effects how the plan is implemented.</inlineHelpText>
    <label>Conversion Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard 401(k) Plan</fullName>
            </value>
            <value>
                <fullName>PEO 401(k) Plan</fullName>
            </value>
            <value>
                <fullName>Solo 401(k) Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>