force-app/main/default/objects/Opportunity/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <description>Returns Month and Date Created for Year over Year Comparisons</description>
    <formula>Date(2015,MONTH(DATEVALUE(CreatedDate)),DAY(DATEVALUE(CreatedDate)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date (Month, Day)</label>
    <type>Date</type>
</CustomField>