force-app/main/default/objects/Opportunity/fields/CRG_Owner__c.field-meta.xml
<CustomField>
    <fullName>CRG_Owner__c</fullName>
    <label>CRG Owner</label>
    <length>50</length>
    <type>Text</type>
</CustomField>