force-app/main/default/objects/Opportunity/fields/Custodian_Other__c.field-meta.xml
<CustomField>
    <fullName>Custodian_Other__c</fullName>
    <description>Write-in field for other Custodians</description>
    <inlineHelpText>Write-in field for other Custodians</inlineHelpText>
    <label>Custodian (Other)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>