force-app/main/default/objects/Opportunity/fields/Custom_Fund_List_Included__c.field-meta.xml
<CustomField>
    <fullName>Custom_Fund_List_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Fund List Included</label>
    <type>Checkbox</type>
</CustomField>