force-app/main/default/objects/Opportunity/fields/DeconTermReason__c.field-meta.xml
<CustomField>
    <fullName>DeconTermReason__c</fullName>
    <inlineHelpText>This is usually completed when client sends in letter with questionnaire.</inlineHelpText>
    <label>Decon / Term Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Term: company closing</fullName>
            </value>
            <value>
                <fullName>Term: company acquired</fullName>
            </value>
            <value>
                <fullName>Term: budget constraints</fullName>
            </value>
            <value>
                <fullName>Term: switch to plan type TOK doesn&apos;t support</fullName>
            </value>
            <value>
                <fullName>Term: low plan participation</fullName>
            </value>
            <value>
                <fullName>Term: no-start</fullName>
            </value>
            <value>
                <fullName>Term: forced - unpaid invoice</fullName>
            </value>
            <value>
                <fullName>Term: Term/Merger</fullName>
            </value>
            <value>
                <fullName>Term: switch to another TOK plan</fullName>
            </value>
            <value>
                <fullName>Decon: cost/pricing</fullName>
            </value>
            <value>
                <fullName>Decon: service issues</fullName>
            </value>
            <value>
                <fullName>Decon: enhanced offering</fullName>
            </value>
            <value>
                <fullName>Decon: no-start</fullName>
            </value>
            <value>
                <fullName>Decon/Non-payment</fullName>
            </value>
            <value>
                <fullName>Decon: plan acquired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>