force-app/main/default/objects/Opportunity/fields/DefaultStagefromLeadDoNotCallCustom__c.field-meta.xml
<CustomField>
    <fullName>DefaultStagefromLeadDoNotCallCustom__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field mapped to Lead field DoNotCallCustom-StageDefault and used in workflow rules to set Stage</description>
    <inlineHelpText>This field mapped to Lead field DoNotCallCustom-StageDefault and used in workflow rules to set Stage</inlineHelpText>
    <label>DefaultStagefromLeadDoNotCallCustom</label>
    <type>Checkbox</type>
</CustomField>